--- a/build.gradle
+++ b/build.gradle
@@ -22,20 +22,22 @@ configurations {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation 'com.h2database:h2'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
 
     implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
-    implementation 'mysql:mysql-connector-java'
+
+    implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.0.33'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
 
-
+    runtimeOnly 'mysql:mysql-connector-j'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
