--- a/build.gradle
+++ b/build.gradle
@@ -33,11 +33,11 @@ dependencies {
 
     implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.0.33'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.hibernate:hibernate-java8'
 
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
 
-    runtimeOnly 'mysql:mysql-connector-j'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
