--- a/build.gradle
+++ b/build.gradle
@@ -35,9 +35,11 @@ dependencies {
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
     annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
 
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
     implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.0.33'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.hibernate:hibernate-java8'
+//    implementation 'org.hibernate:hibernate-java8'
 
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
